feat(POST-BE-004): basic setup for get hashtag api
